--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2142,107 +2142,107 @@ stories:
   domain: http://www.statesville.com/
   link: https://www.statesville.com/news/state/ap/china-s-expresses-backing-for-hong-kong-chief-after-protests/image_4e596305-2a59-58fb-aa05-0bffc24e0989.html
 images:
-- name: old-school-house-old-schoolhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-cinnamon-rolls.jpg
-- name: old-granary-field-granaryfield-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-soul.jpg
-- name: paris-paris-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kand-two.jpg
-- name: nyc-flag-nycflag-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-neo-instinct.jpg
-- name: old-granary-field-granaryfield-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
-- name: rockingchair-rockingchair-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
-- name: curtain-curtain-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-rainbow-festival.jpg
-- name: store-on-corner-oldcabin-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-umberto-bocc.jpg
-- name: cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smoking-cigarette.jpg
-- name: crow-crow-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-two.jpg
-- name: dragon_close-up-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-copper-circuit.jpg
-- name: statue-of-liberty-front-view-statueofliberty-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-purp-paper.jpg
-- name: white-house-whitehouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-rainbow-festival.jpg
-- name: dc-statue-dcstatue-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-oily-mcoilface.jpg
-- name: old-barn-old-barn-1500-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-oily-mcoilface.jpg
-- name: 35201856153_61bc075e4b-nazi-invasion.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-creativity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-creativity.JPG
-- name: rockingchair-face-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colorful-blocks.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-creativity.jpg
-- name: blossombar-spagetti-accident-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-spagetti-accident-file-00-00-50-62.jpg
-- name: oldbarn-oldbarn-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-rain.jpg
-- name: windowmountain-window-mountain-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-satan-red.jpg
-- name: downtown-los-angeles-downtown-la-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-paper.JPG
-- name: amusement-park-amusement-park-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-blocks.jpg
-- name: supreme-court-supremecourt-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-2-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-storm.jpg
-- name: razorcliff-razorcliff-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-collage.jpg
-- name: old-house-oldhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colored-circuits.jpg
-- name: catacombs-catacombs-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-kand-two.jpg
-- name: udnie-DSC_0291.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0291.jpg
-- name: oldtrain-oldtrain-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alberto-giacometti.jpg
-- name: fence-mexico-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
-- name: old-cabin-oldcabin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-pond.jpg
-- name: aws-s3-stories-beach-rocks-currents-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-feed-people.jpg
-- name: mediterranean-mediterranean-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-electricity.jpg
-- name: hollywood-building-hollywood-building-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
-- name: nyc-flag-nycflag-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-color.jpg
-- name: locked-up-steam-lock-up-steam-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-spagetti-accident.jpg
-- name: downtown-los-angeles-downtown-la-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-3.JPG
-- name: white-house-lawn-white-house-lawn-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smoking-cigarette.jpg
-- name: fence-fence-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-aqua.jpg
-- name: docks-docks-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-kand-two.jpg
-- name: yosemite-yosemite-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-space-pizza.jpg
-- name: miamibeach-miamibeach-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-creativity.jpg
-- name: supreme-court-supremecourt-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crunch-paper.jpg
-- name: berlinwall-DSC-0084-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-storm.jpg
-- name: nyc-flag-nycflag-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
-- name: capital-battle-capitolbattle-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-dresden.jpg
-- name: white-house-lawn-white-house-window-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crunch-paper.jpg
-- name: aws-s3-mountainlake-mountainlake-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-600.jpg
-- name: death-valley-death-valley-national-park-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-emily-carr.jpg
+- name: white-house-lawn-white-house-lawn-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-light-dali.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-5.jpg
+- name: aws-s3-stories-new-downtheline-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-downtheline-dark-dali.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: oldbarn-oldbarn-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
+- name: ellis-island-ellis-island-room-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-purple-pond.jpg
+- name: windowmountain-window-mountain-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-ww2-dresden.jpg
+- name: oldhotel-oldhotel-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-dali.jpg
+- name: ""
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/
+- name: downtown-trucksilo-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-circuit.jpg
+- name: bordercrossing-bordercrossing-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-granite.jpg
+- name: wind-mills-windmills-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crafty-painting.jpg
+- name: liberty-back-statue-liberty-back-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-ww2-color.jpg
+- name: castle-wall-DSC-0067-crabapple.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crabapple.JPG
+- name: crow_smooth_ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-cinnamon-rolls.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-cinnamon-rolls.JPG
+- name: fence-fence-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gan-vogh.jpg
+- name: old-barn-old-barn-1500-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dali-two.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
+- name: status-berlin-status-berlin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
+- name: downtown-fredericksburg-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-crafty-painting.JPG
+- name: death-valley-death-valley-national-park-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-yellow-paper.jpg
+- name: dc-statue-dcstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-emily-carr.jpg
+- name: amusement-park-amusement-park-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
+- name: fence-mexico-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smooth-ride.jpg
+- name: oldhouse-granaryfield.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield.jpg
+- name: ellis-island-ellis-island-room-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crafty-painting.jpg
+- name: copper-circuit-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_8494.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: scream-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
+- name: oldcabin-oldcabin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-oily-mcoilface.jpg
+- name: crow_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crabapple.jpg
+- name: border-crossing-bordercrossing-spagetti-accident.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-spagetti-accident.png
+- name: windowmountain-window-mountain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-storm.jpg
+- name: nyc-flag-nycflag-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-cinnamon-rolls.jpg
+- name: oldhousecars-house-old-cars-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purple-pond.jpg
+- name: blossombar-crafty-painting-file-00-00-50-28.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-28.jpg
+- name: aws-s3-stories-castle-walls-cannon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-walls-cannon-satan-red.jpg
+- name: powerlines-power-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-bright-sand.jpg
+- name: cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
+- name: stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-yellow-collage.jpg
+- name: carry-load-carryload-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
+- name: fence-mexico-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-emily-carr.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dali-two.jpg
+- name: ellis-island-ellis-island-room-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-rain.jpg
+- name: walled-garden-walled-garden-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-light-dali.jpg
+- name: border-crossing-bordercrossing-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-blocks.png
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+- name: white-house-lawn-white-house-lawn-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-three.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
 ---
 Listen To The Sentinel News Minute.&nbsp;Dixie Majors Roll On In Kenansville.&nbsp;Winning Numbers Drawn In 'All Or Nothing Night' Game.&nbsp;Register For The Mack Brown Youth Football Clinic Today.&nbsp;No News A Week After Australian Disappears In North Korea.&nbsp;Here's A Roundup Of All The New Florida Laws That Went Into Effect Today.&nbsp;Rhythm And Roots Festival Coming To Newburyport.&nbsp;Schumer Hits Trump's 'reality Show Foreign Policy'.&nbsp;
